Fix white rendering flashes in dark mode
This CL makes them black instead

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -39,6 +39,10 @@ hr {
 }
 
 @media (prefers-color-scheme: dark) {
+  body {
+    background-color: black;
+  }
+
   a {
     color: #599eff !important;
   }
